--- a/.github/workflows/CosCI.yml
+++ b/.github/workflows/CosCI.yml
@@ -1,5 +1,5 @@
 
-name: CI
+name: Cos CI
 
 on:
   push:
@@ -10,13 +10,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Run info
         run: run info
-        
-      - name: run info
-        run: run info
+      
