--- a/.github/workflows/CosCI.yml
+++ b/.github/workflows/CosCI.yml
@@ -10,11 +10,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-linux:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Run info
-        run: run info
+        run: echo hour
       
