--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,36 +14,23 @@
         android:xlargeScreens="true" />
 
      <queries>
-        <package android:name="android" />
+        <package android:name="com.termux.api" />
         <package android:name="com.termux" />
         <package android:name="com.xiaomi.joyose" />
-        <package android:name="com.xiaomi.market" />
-        <package android:name="com.miui.freeform" />
         <package android:name="com.miui.analytics" />
         <package android:name="com.android.settings" />
-        <package android:name="com.xiaomi.misettings" />
-        <package android:name="com.miui.guardprovider" />
-        <package android:name="com.android.shell" />
-        <package android:name="com.miui.securitycore" />
-        <package android:name="com.miui.securitycenter" />
-        <package android:name="com.miui.dmregservice" />
-        <package android:name="com.miui.powerkeeper" />
-        <package android:name="com.xiaomi.registration" />
-        <package android:name="com.android.systemui" />
-        <package android:name="com.miui.home" />
-        <package android:name="com.miui.core" />
-        <package android:name="com.google.android.gms" />
-        <package android:name="com.miui.securityadd" />
-        <package android:name="com.android.networkstack" />
-        <package android:name="com.miui.systemAdSolution" />
-        <package android:name="com.android.adservices.api" />
-        <package android:name="com.xiaomi.migameservice" />
-        <package android:name="com.xiaomi.location.fused" />
-        <package android:name="com.miui.system.overlay" />
-        <package android:name="com.google.android.webview" />
-        <package android:name="com.miui.mishare.connectivity" />
-        <package android:name="com.android.permissioncontroller" />
-        <package android:name="com.xiaomi.gamecenter.sdk.service" />
+        <package android:name="org.lsposed.daemon" />
+        <package android:name="org.lsposed.manager" />
+        <package android:name="me.weishu.kernelsu" />
+        <package android:name="io.github.huskydg.magisk" />
+        <package android:name="com.rosan.dhizuku" />
+        <package android:name="moe.shizuku.privileged.api" />
+        <package android:name="me.jsonet.jshook" />
+        <package android:name="com.xiaomi.market" />
+        <package android:name="de.robv.android.xposed.installer" />
+        <package android:name="me.weishu.dirtypipecheck" />
+        <package android:name="org.lsposed.lspatch" />
+        <package android:name="org.lsposed.opatch" />
      </queries>
 
     <queries>
@@ -127,7 +114,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
+    <uses-permission android:name="com.rosan.dhizuku.permission.API" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
@@ -150,12 +138,14 @@
         android:allowBackup="true" 
         android:usesNonSdkApi="true"
         android:isSplitRequired="true"
+        android:directBootAware="true"
         android:extractNativeLibs="true"
         android:resizeableActivity="true"
         android:usesCleartextTraffic="true"
         android:attributionsAreUserVisible="true"
         android:preserveLegacyExternalStorage="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:appCategory="productivity"
         android:icon="@mipmap/ic_launcher" 
         android:roundIcon="@mipmap/ic_launcher" 
         android:label="@string/app_name" 
@@ -163,7 +153,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="support"
-            android:value="android 10 ~ 14" />
+            android:value="android 8.0 ~ 14" />
         <meta-data
             android:name="CPU support"
             android:value="arm64-v8a、x86_64" />
@@ -174,11 +164,11 @@
 			android:name="root support"
 			android:value="KernelSU/Magisk" />
         <meta-data
-			android:name="appid"
-			android:resource="@raw/appid" />
-        <meta-data
 			android:name="Xposed support"
 			android:value="v80 ~ v100" />
+        <meta-data
+           android:name="moe.shizuku.client.V3_SUPPORT"
+           android:value="true" />
 			
         <activity 
             android:name="com.android.activity.LxynActivity" 
@@ -256,6 +246,14 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/xyn" />
        </provider>
+        
+    <provider
+           android:name="rikka.shizuku.ShizukuProvider"
+           android:authorities="xyn.xyn.xyn.shizuku"
+           android:multiprocess="false"
+           android:enabled="true"
+           android:exported="true"
+           android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
        
     </application>
 </manifest>
