--- a/app/src/main/assets/appid.ini
+++ b/app/src/main/assets/appid.ini
@@ -1,4 +1,4 @@
-{"%%%"
+{"appid"
 "app" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" 
 "dex" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
 "res" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
@@ -6,65 +6,7 @@
 "Libs" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
 "Android" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
 "key" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"%%%"}
-%%%?: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-%%%!: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-%%%: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
-                             
+"appid"}
+appid?: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
+appid!: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
+appid: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
