--- a/app/src/main/assets/appid.ini
+++ b/app/src/main/assets/appid.ini
@@ -1,12 +1,1 @@
-{"appid"
-"app" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" 
-"dex" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"res" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"ksp" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"Libs" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"Android" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"key" : "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-"appid"}
-appid?: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-appid!: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
-appid: "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%"
+{"info-app" : "app-id-key"}
