--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Runs
         uses: actions/checkout@v4
  
-      - name: Set up Node.js
+      - name: Jars
         uses: actions/setup-node@v4
         with:
           node-version: 20
