Update and rename Push.yml to RunFile.yml

--- a/.github/workflows/RunFile.yml
+++ b/.github/workflows/RunFile.yml
@@ -1,18 +1,15 @@
-name: Push Ci
+name: Run Ci
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
- test:
+ runfile:
     runs-on: ubuntu-latest
 
     steps:
       - name: Runs
         uses: actions/checkout@v4
- 
-      - name: Jars
-        uses: actions/setup-node@v4
         with:
           node-version: 20
