--- a/.github/workflows/RunFile.yml
+++ b/.github/workflows/RunFile.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Runs
         uses: actions/checkout@v4
         with:
-          node-version: 20
+          repository: ${{ github.repository }}
