--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     android:shell="true"
+    android:sharedUserId="xyn.xyn.xyn"
+    android:sharedUserMaxSdkVersion="32"
+    android:targetSandboxVersion="2"
     android:installLocation="auto">
     
     <supports-screens
@@ -139,7 +142,6 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"/>
-    <uses-permission android:name="android.permission.ACCESS_WIMAX_STATE" />
     <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -155,7 +157,6 @@
     <uses-permission android:name="android.permission.READ_SOCIAL_STREAM" />
     <uses-permission android:name="android.permission.WRITE_SOCIAL_STREAM" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
-    <uses-permission android:name="android.permission.READ_APP_BADGE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.NFC" />
@@ -163,195 +164,12 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.TRANSMIT_IR" />
     <uses-permission android:name="android.permission.USE_SIP" />
-    <uses-permission android:name="android.permission.READ_OWNER_DATA" />
     <uses-permission android:name="android.permission.READ_INSTALL_SESSIONS" />
-    <uses-permission android:name="android.permission.CHANGE_WIMAX_STATE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.DELETE_PACKAGES" />
     <uses-permission android:name="android.permission.READ_INSTALL_SESSIONS" />
     <uses-permission android:name="android.permission.UPDATE_PACKAGES_WITHOUT_USER_ACTION" />
-    
-    <permission
-        android:name="android.permission.PACKAGE_USAGE_STATS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_SETTINGS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.RESTART_PACKAGES"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_PHONE_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.GET_ACCOUNTS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.GET_TASKS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.MANAGE_ACCOUNTS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.AUTHENTICATE_ACCOUNTS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.POST_NOTIFICATIONS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.USE_CREDENTIALS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.QUERY_ALL_PACKAGES"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_NETWORK_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_WIFI_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.BROADCAST_STICKY"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.REQUEST_COMPANION_USE_DATA_IN_BACKGROUND"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.REQUEST_COMPANION_RUN_IN_BACKGROUND"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_MEDIA_IMAGES"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_MEDIA_AUDIO"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_MEDIA_VIDEO"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.CHANGE_NETWORK_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.INTERNET"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.INTERACT_ACROSS_USERS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.DUMP"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_SECURE_SETTINGS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.BATTERY_STATS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.SYSTEM_ALERT_WINDOW"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_FINE_LOCATION"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_GPS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.ACCESS_WIMAX_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_LOGS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.REQUEST_INSTALL_PACKAGES"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.CHANGE_WIMAX_STATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_INSTALL_SESSIONS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_OWNER_DATA"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.INSTALL_PACKAGES"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.USE_SIP"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.TRANSMIT_IR"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.VIBRATE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.NFC"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.MODIFY_AUDIO_SETTINGS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.BODY_SENSORS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.FLASHLIGHT"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_APP_BADGE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_SOCIAL_STREAM"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_SOCIAL_STREAM"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_PROFILE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_PROFILE"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_USER_DICTIONARY"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.WRITE_USER_DICTIONARY"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.INTERACT_ACROSS_USERS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.UPDATE_PACKAGES_WITHOUT_USER_ACTION"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.READ_INSTALL_SESSIONS"
-        android:protectionLevel="signature" />
-    <permission
-        android:name="android.permission.DELETE_PACKAGES"
-        android:protectionLevel="signature" />
     
     <application 
         android:allowBackup="true" 
@@ -371,21 +189,6 @@
         android:label="@string/app_name" 
         android:supportsRtl="true" 
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="support"
-            android:value="android 10 ~ 14" />
-        <meta-data
-            android:name="CPU support"
-            android:value="arm64-v8a、x86_64" />
-        <meta-data
-			android:name="miui support"
-			android:value="v12.5 ~ v816.0" />
-		<meta-data
-			android:name="root support"
-			android:value="KernelSU/Magisk/Kitsune" />
-        <meta-data
-			android:name="shell support"
-			android:value="adb/sh/su" />
 			
         <activity 
             android:name="com.android.activity.LxynActivity" 
