--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,14 +10,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(SOURCE_DIR src/main/cpp)
 
-add_library(root SHARED root.cpp)
+add_library(apply SHARED root.cpp shell.cpp c++_shared.cpp)
 
-add_library(shell SHARED shell.cpp)
-
-add_library(c++_shared SHARED c++_shared.cpp)
-
-set_target_properties(root PROPERTIES OUTPUT_NAME "root")
-
-set_target_properties(shell PROPERTIES OUTPUT_NAME "shell")
-
-set_target_properties(c++_shared PROPERTIES OUTPUT_NAME "c++_shared")
+set_target_properties(apply PROPERTIES OUTPUT_NAME "apply")
